Switch to more optimal datastructure